# HelloLangChain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py
app/agents/: stock_agent.py
app/chains/: chat_chain.py
app/config/: env_loader.py
app/db/: auth_store.py  connection.py  migrations.py
app/db/migrations/: 001_initial_auth_and_memory.sql
app/llm/: clients.py
app/tools/: financial_tools.py
app/web/: constants.py  dependencies.py  main.py  model_errors.py  schemas.py
app/web/routers/: auth.py  chat.py  models.py  pages.py  users.py
app/web/services/: chat_service.py
static/: app.js  auth.js  styles.css
templates/: index.html  login.html  register.html
tests/: test_env_loader.py  test_migrations.py  test_model_errors.py  test_schemas.py
