[project]
name = "hellolangchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.0",
    "langchain>=1.3.1",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "psycopg[binary]>=3.3.2",
    "uvicorn>=0.38.0",
]
